--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 			<section id="header">
 				<header class="major">
 					<h1> <span class="txt-type" data-wait="1500" data-words='["Hey there!", "Salam Aleykum", "Привет", "Bonjour!"]'></span></h1>
-					<p> Hi there, welcome to my page.</p> 
-					<br>
-					<p>You made the right choice.</p>
+					<p> Welcome to my page.</p> 
+					<p> You made the right choice.</p>
 				</header>
 				<div class="container">
 					<ul class="actions special">
